--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,12 +1,8 @@
 @import '../../variables.scss';
 
-body {
-  margin: 0;
-  padding: 0;
-}
-
-
-.styleguide {
+.tlbx-h1,
+.tlbx-notes,
+.tlbx-sidebar-wrapper {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 }
 
